--- a/project4/html/board/board.html
+++ b/project4/html/board/board.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <header id="headerType" class="header__wrap nexon">
+    <header id="headerType" class="header__wrap">
         <div class="header__inner">
             <div class="header__logo">
                 <a href="#">winimal</a>
@@ -105,67 +105,91 @@
             <div class="borad__table">
                 <table class="table">
                     <colgroup>
-                        <col style="width: 80%">
-                        <col style="width: 10%">
-                        <col style="width: 10%">
+                        <col style="width: 7%">
+                        <col style="width: 66%">
+                        <col style="width: 9%">
+                        <col style="width: 14%">
+                        <col style="width: 5%">
                     </colgroup>
                     <thead>
                         <tr>
+                            <th>번호</th>
                             <th>제목</th>
                             <th>글쓴이</th>
                             <th>글쓴날짜</th>
+                            <th>조회수</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
+                            <td>1</td>
                             <td>1. Lorem Ipsum is simply dummy text of the printing and typesetting industry. simply dummy text of the printing.</td>
                             <td>이영환</td>
                             <td>1</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td>2</td>
                             <td>긴지라 내는 그들에게 현저하게 인생의 이상의 무엇을 피고 것이다. 싸인 가슴이 청춘의 커다란 열락의 오아이스도 기쁘며, 것은 소금이라 있다. </td>
                             <td>우모래</td>
                             <td>2</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td>3</td>
                             <td>미묘한 앞이 소금이라 능히 곳이 노년에게서 설산에서 피다. 청춘의 얼마나 같으며, 밥을 넣는 것이다. 이상의 뜨거운지라, 살 사랑의 평화스러운...</td>
                             <td>가슴동</td>
                             <td>3</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td></td>
                             <td>지혜는 청춘 방황하였으며, 않는 전인 용감하고 이상이 노래하며 찬미를 봄바람이다. 두기 쓸쓸한 끓는 뜨고, 아니더면, 보배를 집에 들어가..</td>
                             <td>사장님</td>
                             <td>4</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td></td>
                             <td>이상은 끓는 있는 되는 그들은 위하여, 봄바람이다. 밥을 물방아 것은 때문이다. 같이, 같지 봄바람을 청춘을 아름답고 있는 뼈 가슴에 못하다 것</td>
                             <td>언사소</td>
                             <td>5</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td></td>
                             <td>님들 이거 왜이런거임?</td>
                             <td>꺼펑이</td>
                             <td>6</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td></td>
                             <td>아.. 집에가고싶다..</td>
                             <td>정벽처</td>
                             <td>7</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td></td>
                             <td>배고픈데 나만그럼?</td>
                             <td>서렬등</td>
                             <td>8</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td></td>
                             <td>오늘 점심 뭐드실거에요?</td>
                             <td>흰여로</td>
                             <td>9</td>
+                            <td>1234</td>
                         </tr>
                         <tr>
+                            <td></td>
                             <td>홀란드는 역시 전설이다..</td>
                             <td>뽈란드</td>
                             <td>10</td>
+                            <td>1234</td>
                         </tr>
                     </tbody>
                 </table>                
@@ -179,13 +203,15 @@
                     <li><a href="#">4</a></li>
                     <li><a href="#">5</a></li>
                     <li><a href="#">&gt;</a></li>
-                    <li class="write"><a href="#">글쓰기</a></li>
                 </ul>                    
             </div>
             <div class="search__box">
                 <form action="." method="post">
-                  <input class="search-txt" type="text" placeholder="...">
-                  <button class="search-btn" type="submit">search</button>
+                    <fieldset>
+                        <input class="search-txt" type="text" placeholder="...">
+                        <button class="search-btn" type="submit">search</button>
+                        <a href="#" class="board_write">글쓰기</a>
+                    </fieldset>
                 </form>
               </div>
         </div>
