--- a/project4/html/board/board.html
+++ b/project4/html/board/board.html
@@ -84,17 +84,17 @@
                             <col style="width: 10%; text-align: right;">
                             <col style="width: 10%; text-align: right;">
                         </colgroup>
-                        <tr>
+                        <tr class="board_ranking_tr">
                             <td>홀란드는 진짜 전설이다 ㄷㄷ</td>
                             <td>이영환 님</td>
                             <td>2022 / 10 / 08</td>
                         </tr>
-                        <tr>
+                        <tr class="board_ranking_tr">
                             <td>아니 우리 강아지 배고프다는데요</td>
                             <td>문병내 님</td>
                             <td>2022 / 10 / 08</td>
                         </tr>
-                        <tr>
+                        <tr class="board_ranking_tr">
                             <td>제라드가 더 좋지않나요?</td>
                             <td>김다빈 님</td>
                             <td>2022 / 10 / 08</td>
@@ -123,72 +123,72 @@
                     <tbody>
                         <tr>
                             <td>1</td>
-                            <td>1. Lorem Ipsum is simply dummy text of the printing and typesetting industry. simply dummy text of the printing.</td>
+                            <td>어느 병원을 추천하시나요?</td>
                             <td>이영환</td>
-                            <td>1</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>긴지라 내는 그들에게 현저하게 인생의 이상의 무엇을 피고 것이다. 싸인 가슴이 청춘의 커다란 열락의 오아이스도 기쁘며, 것은 소금이라 있다. </td>
+                            <td>강아지가 많이 아파하네요 ㅜㅜ</td>
                             <td>우모래</td>
-                            <td>2</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
                             <td>3</td>
                             <td>미묘한 앞이 소금이라 능히 곳이 노년에게서 설산에서 피다. 청춘의 얼마나 같으며, 밥을 넣는 것이다. 이상의 뜨거운지라, 살 사랑의 평화스러운...</td>
                             <td>가슴동</td>
-                            <td>3</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>4</td>
                             <td>지혜는 청춘 방황하였으며, 않는 전인 용감하고 이상이 노래하며 찬미를 봄바람이다. 두기 쓸쓸한 끓는 뜨고, 아니더면, 보배를 집에 들어가..</td>
                             <td>사장님</td>
-                            <td>4</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>5</td>
                             <td>이상은 끓는 있는 되는 그들은 위하여, 봄바람이다. 밥을 물방아 것은 때문이다. 같이, 같지 봄바람을 청춘을 아름답고 있는 뼈 가슴에 못하다 것</td>
                             <td>언사소</td>
-                            <td>5</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>6</td>
                             <td>님들 이거 왜이런거임?</td>
                             <td>꺼펑이</td>
-                            <td>6</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>7</td>
                             <td>아.. 집에가고싶다..</td>
                             <td>정벽처</td>
-                            <td>7</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>8</td>
                             <td>배고픈데 나만그럼?</td>
                             <td>서렬등</td>
-                            <td>8</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>9</td>
                             <td>오늘 점심 뭐드실거에요?</td>
                             <td>흰여로</td>
-                            <td>9</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>10</td>
                             <td>홀란드는 역시 전설이다..</td>
                             <td>뽈란드</td>
-                            <td>10</td>
+                            <td>2022-10-07</td>
                             <td>1234</td>
                         </tr>
                     </tbody>
@@ -208,16 +208,17 @@
             <div class="search__box">
                 <form action="." method="post">
                     <fieldset>
-                        <input class="search-txt" type="text" placeholder="...">
-                        <button class="search-btn" type="submit">search</button>
+                        <input class="search-txt" type="text" placeholder="검색어를 입력해주세요.">
+                        <button class="search-btn" type="submit">SEARCH</button>
                         <a href="#" class="board_write">글쓰기</a>
                     </fieldset>
                 </form>
               </div>
         </div>
     </section>
+    
+    <footer id="footer" class="footer">
+        <h5>푸터일시다</h5>
+    </footer>
 </body>
-<footer id="footer" class="footer">
-    <h5>푸터일시다</h5>
-</footer>
 </html>
