--- a/project/html/login/findID_email.html
+++ b/project/html/login/findID_email.html
@@ -10,10 +10,10 @@
     <!-- 공통 CSS -->
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/common.css">
-    <link rel="stylesheet" href="../../asset/css/idPassCommon.css">
+    <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
     
     <!-- 아이디찾기 CSS -->
-    <link rel="stylesheet" href="../../asset/css/Verification.css">
+    <link rel="stylesheet" href="../../asset/css/login/Verification.css">
 
 
 
@@ -25,10 +25,10 @@
     <div class="login__popup score inner_height">
         <div class="login__inner">
             <div class="login__header">
-                <h3>I.D/P.W 찾기</h3>
+                <h3><a href="findID.html">I.D/P.W 찾기</a></h3>
             </div>
             <div class="tab_menu">
-                <span class="id active">ID</span> <em>|</em> <span class="pass">Password</span>
+                <span class="id active">ID</span> <em>|</em> <span class="pass"><a href="findID.html">Password</a></span>
                 <div class="search_contents">
                     <h4 class="user_search">아이디 찾기</h4>
                     <div class="emailVerifi">
@@ -67,7 +67,7 @@
     </div>
 
     <!-- 모달 및 탭메뉴 -->
-    <script src="../../asset/js/tab_modal.js"></script>
+    <script src="../../asset/js/close_modal.js"></script>
 
     <script>
 
