--- a/project/html/login/findPW_confirm.html
+++ b/project/html/login/findPW_confirm.html
@@ -10,10 +10,10 @@
     <!-- 공통 CSS -->
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/common.css">
-    <link rel="stylesheet" href="../../asset/css/idPassCommon.css">
+    <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
     
     <!-- 비밀번호 찾음 CSS -->
-    <link rel="stylesheet" href="../../asset/css/idPassConfirm.css">
+    <link rel="stylesheet" href="../../asset/css/login/idPassConfirm.css">
 
 
 
@@ -25,10 +25,10 @@
     <div class="login__popup score inner_height2">
         <div class="login__inner">
             <div class="login__header">
-                <h3>I.D/P.W 찾기</h3>
+                <h3><a href="findID.html">I.D/P.W 찾기</a></h3>
             </div>
             <div class="tab_menu">
-                <span class="id">ID</span> <em>|</em> <span class="pass active">Password</span>
+                <span class="id"><a href="findID.html">ID</a></span> <em>|</em> <span class="pass active">Password</span>
                 <div class="search_contents">
                     <h4 class="user_search">비밀번호 재설정</h4>
                     <div class="id_find2">
@@ -59,7 +59,7 @@
     </div>
 
     <!-- 모달 및 탭메뉴 -->
-    <script src="../../asset/js/tab_modal.js"></script>
+    <script src="../../asset/js/close_modal.js"></script>
 
     <script>
 
