--- a/project/html/login/join.html
+++ b/project/html/login/join.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/common.css">
     <link rel="stylesheet" href="../../asset/css/font.css">
-    <link rel="stylesheet" href="../../asset/css/idPassCommon.css">
-    <link rel="stylesheet" href="../../asset/css/join.css">
+    <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
+
+    <!-- join -->
+    <link rel="stylesheet" href="../../asset/css/login/join.css">
 </head>
 <body>
     <div class="join__popup">            
@@ -25,6 +27,17 @@
                             <div>
                                 <label class="blind" for="youName">이름</label>
                                 <input type="text" id="youName" name="youEmail" placeholder="이름" required>
+                            </div>
+                            <div class="choice_gender">
+                                <p class="blind" for="youGender">성별</p>
+                                <span>
+                                    <input type="radio" id="youGenderMale" name="youGender" value="male" required>
+                                    <label class="gender" for="youGenderMale">남자</label>
+                                </span>
+                                <span>
+                                    <input type="radio" id="youGenderFemale" name="youGender" value="female" required>
+                                    <label class="gender" for="youGenderFemale">여자</label>
+                                </span>
                             </div>
                             <div class="id_box">
                                 <label class="blind" for="youID">ID</label>
@@ -42,7 +55,7 @@
                             <h3>E-mail</h3>
                             <div>
                                 <label class="blind" for="youEmail">이메일</label>
-                                <input type="youEmail" id="youEmail" name="youEmail" placeholder="E-mail" required>
+                                <input type="email" id="youEmail" name="youEmail" placeholder="E-mail" required>
                             </div>
                             <h3>Phone</h3>
                             <div>
@@ -64,6 +77,7 @@
     </div>
 
     <script>
+        // 닫기 버튼
         const joinPopup = document.querySelector(".join__popup");
         const close_btn = document.querySelector(".close_btn");
 
