--- a/project/html/login/joinAgree.html
+++ b/project/html/login/joinAgree.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/common.css">
     <link rel="stylesheet" href="../../asset/css/font.css">
-    <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
+    <link rel="stylesheet" href="../../asset/css/idPassCommon.css">
 
     <!-- 약관 동의 CSS -->
-    <link rel="stylesheet" href="../../asset/css/login/Agree.css">
+    <link rel="stylesheet" href="../../asset/css/Agree.css">
 </head>
 <body>
     <div class="agree__popup">            
