--- a/project/html/login/findID.html
+++ b/project/html/login/findID.html
@@ -10,10 +10,10 @@
     <!-- 공통 CSS -->
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/common.css">
-    <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
+    <link rel="stylesheet" href="../../asset/css/idPassCommon.css">
     
     <!-- 아이디찾기 CSS -->
-    <link rel="stylesheet" href="../../asset/css/login/findID.css">
+    <link rel="stylesheet" href="../../asset/css/findID.css">
 
 </head>
 <body>
