--- a/project/html/login/join.html
+++ b/project/html/login/join.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/common.css">
     <link rel="stylesheet" href="../../asset/css/font.css">
-    <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
+    <link rel="stylesheet" href="../../asset/css/idPassCommon.css">
 
     <!-- join -->
-    <link rel="stylesheet" href="../../asset/css/login/join.css">
+    <link rel="stylesheet" href="../../asset/css/join.css">
 </head>
 <body>
     <div class="join__popup">            
