--- a/project/html/login/loginpopup.html
+++ b/project/html/login/loginpopup.html
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" href="../../asset/css/common.css">
     <link rel="stylesheet" href="../../asset/css/reset.css">
-    <link rel="stylesheet" href="../../asset/css/login/idPassCommon.css">
-    <link rel="stylesheet" href="../../asset/css/login/login.css">
+    <link rel="stylesheet" href="../../asset/css/idPassCommon.css">
+    <link rel="stylesheet" href="../../asset/css/login.css">
 </head>
 <body>
     <div class="login_btn">로그인</div>
