--- a/project/html/login/findID.html
+++ b/project/html/login/findID.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인 팝업</title>
+    <title>로그인 팝업 : 아이디 : 인증 방법</title>
 
     <!-- 공통 CSS -->
     <link rel="stylesheet" href="../../asset/css/reset.css">
@@ -30,11 +30,11 @@
                         <p>원하시는 인증 방법을 선택해주세요.</p>
                         <div class="search_choice">
                             <figure class="method email_choice">
-                                <img src="../../asset/img/email_logo.png" alt="이메일 로고">
+                                <img src="../../asset/img/email_logo.svg" alt="이메일 로고">
                                <figcaption>이메일 인증</figcaption> 
                             </figure>
                             <figure class="method phone_choice">
-                                <img src="../../asset/img/phone_logo.png" alt="핸드폰 로고">
+                                <img src="../../asset/img/phone_logo.svg" alt="핸드폰 로고">
                                <figcaption>핸드폰 인증</figcaption> 
                             </figure>
                         </div>
@@ -46,11 +46,11 @@
                         <p>원하시는 인증 방법을 선택해주세요.</p>
                         <div class="search_choice">
                             <figure class="method email_choice">
-                                <img src="../../asset/img/email_logo.png" alt="이메일 로고">
+                                <img src="../../asset/img/email_logo.svg" alt="이메일 로고">
                                <figcaption>이메일 인증</figcaption> 
                             </figure>
                             <figure class="method phone_choice">
-                                <img src="../../asset/img/phone_logo.png" alt="핸드폰 로고">
+                                <img src="../../asset/img/phone_logo.svg" alt="핸드폰 로고">
                                <figcaption>핸드폰 인증</figcaption> 
                             </figure>
                         </div>
