--- a/project/html/login/findPW_email.html
+++ b/project/html/login/findPW_email.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ID/P.W 찾기</title>
+    <title>비밀번호 찾기 : 이메일 인증</title>
 
     <!-- 공통 CSS -->
     <link rel="stylesheet" href="../../asset/css/reset.css">
