--- a/project/html/login/loginpopup.html
+++ b/project/html/login/loginpopup.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인 팝업</title>
+    <title>로그인 창</title>
 
     <link rel="stylesheet" href="../../asset/css/common.css">
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/idPassCommon.css">
+    
     <link rel="stylesheet" href="../../asset/css/login.css">
 </head>
 <body>
