--- a/project/html/board/boardModify.html
+++ b/project/html/board/boardModify.html
@@ -4,94 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>게시판</title>
+    <title>게시판 글 수정</title>
 
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/common.css">
-    <link rel="stylesheet" href="../../asset/css/header.css">
     <link rel="stylesheet" href="../../asset/css/font.css">
-
+    
+    <link rel="stylesheet" href="../../asset/css/header.css">
     <link rel="stylesheet" href="../../asset/css/loginBanner.css">
     <link rel="stylesheet" href="../../asset/css/boardType.css">
+    <link rel="stylesheet" href="../../asset/css/boardModify.css">
     <link rel="stylesheet" href="../../asset/css/imageType.css">
     <link rel="stylesheet" href="../../asset/css/footerType.css">
-
-    <style>
-
-        .board__write {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 48px;
-        }
-        .board__wrap h3 {
-            font-size: 32px;
-            border-bottom: 1px solid #505050;
-            padding-bottom: 10px;
-            margin-bottom: 50px;
-        }
-        .Option {
-            width: 60%;
-            text-align: left;
-            margin-top: 0;
-            box-sizing: border-box;
-            border-bottom: 1px solid #6cc4b3;
-        }
-        .Write__option {
-
-        }
-        .Option:first-child select {
-            margin-right: 20px;
-        }
-        .Option select {
-            margin-bottom: 20px;
-            margin-right: 20px;
-            width: 210px;
-            border: 1px solid #6cc4b3;
-            border-radius: 25px;
-            font-size: 16px;
-            color: #6cc4b3;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-        }
-        .button {
-            border: 1px solid #6cc4b3;
-            box-sizing: border-box;
-            padding: 5px 25px;
-            border-radius: 30px;
-            box-sizing: border-box;
-        }
-        .button a {
-            color: #6cc4b3;
-        }
-        .image {
-            text-align: right;
-            width: 20%;
-            display: flex;
-            overflow: hidden;
-        }
-        .board__contents {
-            height: 500px;
-            background: #F9F9F9;
-            border-radius: 10px;
-            padding: 30px;
-            position: relative;
-        }
-        .button2 {
-            position: absolute;
-            right: 30px;
-            bottom: 30px;
-        }
-        .button2 a {
-            font-size: 18px;
-            color: #505050;
-        }
-    </style>
-
 </head>
 
 <body>
-    <header id="headerType" class="header__wrap nexon">
+    <header id="headerType" class="header__wrap">
         <div class="header__inner">
             <div class="header__logo">
                 <a href="#">winimal</a>
@@ -137,8 +65,7 @@
             <div class="board__write">                
                 <div class="Option">
                     <select name="searchOption" id="searchOption1" class="Write__option">
-                        <option value="Category">Category    <p>자유게시판</p></option>
-                        
+                        <option value="Category">Category</option>
                     </select>
                     <select name="searchOption" id="searchOption2" class="Write__option">
                         <option value="Date">파일첨부</option>
@@ -161,7 +88,7 @@
         <div class="board__contents">
             <p>가는 투명하되 현저하게 있는가? 우리의 있을 목숨이 수 그들에게 있는가? 싹이 원질이 너의 있음으로써 이것이다. 안고, 청춘 어디 싹이 너의 가치를 가진 피다. 눈이 인생의 인생을 이상은 있으며, 하는 것이다. 공자는 열락의 피가 쓸쓸하랴? 되는 원대하고, 청춘 같이, 그것을 쓸쓸하랴? 자신과 풀밭에 눈이 그들의 못할 있으며, 소리다.이것은 같은 투명하되 이것이다. 있는 구하기 이 능히 것이다.</p>
             <div class="button2">
-                <a href="#">수정 완료 </a>|
+                <a href="#">수정 완료 </a>
                 <a href="#">취소</a>
             </div>            
         </div>
