--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
           <!-- box PHP PROJECT GITHUB -->
           <section class="color-shape animation">
-            <a href="#" target="_blank">
+            <a href="https://github.com/KDB6/ck/tree/main/project" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PHP PROJECT GITHUB</span>
