--- a/project/figma/findPW_05.html
+++ b/project/figma/findPW_05.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비밀번호 찾기01</title>
+    <title>비밀번호 찾기04</title>
     <style>
         * {
             margin: 0;
@@ -33,8 +33,7 @@
     <div class="card__wrap">
         <div class="card">
             <a href="../index.html"><h2>피그마</h2></a>
-            <p>비밀번호 찾기1</p><br>
-            <iframe width="1000" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUpsthaIVoD9chznKFRi6tU%2F%25EC%25A1%25B0%25EB%25B3%2584-%25EC%259E%2591%25EC%2597%2585%3Fnode-id%3D1246%253A35" allowfullscreen></iframe>
-        </div>    
+            <p>비밀번호 찾기5</p><br>
+            <iframe width="1000" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUpsthaIVoD9chznKFRi6tU%2F%25EC%25A1%25B0%25EB%25B3%2584-%25EC%259E%2591%25EC%2597%2585%3Fnode-id%3D1246%253A470" allowfullscreen></iframe>
 </body>
 </html>
