--- a/project/figma/joinAgree.html
+++ b/project/figma/joinAgree.html
@@ -34,7 +34,7 @@
         <div class="card">
             <a href="../index.html"><h2>피그마</h2></a>
             <p>회원가입 동의 팝업</p><br>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUpsthaIVoD9chznKFRi6tU%2F%25EC%25A1%25B0%25EB%25B3%2584-%25EC%259E%2591%25EC%2597%2585%3Fnode-id%3D1012%253A254" allowfullscreen></iframe>
+            <iframe width="1000" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUpsthaIVoD9chznKFRi6tU%2F%25EC%25A1%25B0%25EB%25B3%2584-%25EC%259E%2591%25EC%2597%2585%3Fnode-id%3D1246%253A2" allowfullscreen></iframe>
     </div>    
 </body>
 </html>
