--- a/project/html/board/boardView.html
+++ b/project/html/board/boardView.html
@@ -31,9 +31,15 @@
                 <li><a href="#">disease</a></li>
                 <li><a href="#">community</a></li>
                 <li><a href="#">pet shop</a></li>
-                <li class="login"><a href="#">LOGIN</a></li>
+                <li class="login"><a href="#">LOGOUT</a></li>
             </ul>
-        </nav>                
+        </nav>
+        <div class="ham_menu">
+            <input type="checkbox">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>                
     </div>
 </header>
 
@@ -289,5 +295,16 @@
         <button><a href="">문의하기</a></button>
     </h2>
 </footer>
+
+<script>
+    const btnHam = document.querySelector(".ham_menu");
+    const btnMenu = document.querySelector(".header__menu");
+    const btnMenuList = btnMenu.querySelectorAll("ul li a")
+
+    btnHam.addEventListener("click", () => {
+        btnHam.classList.toggle("active");
+        btnMenu.classList.toggle("active");
+    });
+</script>
 
 </html>
