--- a/study/t_study/Ex/study/note02.html
+++ b/study/t_study/Ex/study/note02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>오답노트 01</title>
+    <title>오답노트 02</title>
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dracula.css">
@@ -20,51 +20,18 @@
 
             <h3 class="t_tit2">첫 번째 문제</h3>
             <div class="t_code">
-<pre><code class="language-js">function solution(a,b,c) {
-    let answer="YES", max;
-    let tot = a + b + c;
-
-    if(a > b) max = a;
-    else max = b;
-    if(c > max) max = c;
-    if(tot - max &lt;= max) answer = "NO";
-
-    return answer;
-}
-
-console.log(solution(13, 33, 17));
-</code></pre>
-            </div>
-            <p class="t_desc2">
-                첫 문제 부터 틀렸습니다..
-            </p>
-
-            <h3 class="t_tit2">두 번째 문제</h3>
-            <div class="t_code">
-<pre><code class="language-js">function solution(n) {
-    let answer;
-    answer = Math.ceil(n/12);
-    return answer;
-}
-
-console.log(solution(178));
-</code></pre>
-            </div>
-
-            <h3 class="t_tit2">세 번째 문제</h3>
-            <div class="t_code">
 <pre><code class="language-js">function solution(arr) {
     let answer = [];
     let sum = 0, min = 1000;
     for(let x of arr) {
-        if(x % 2 ===1) {
-            sum += x;
+        if(x % 2 ===1) {    // arr 배열 중 2를 나눴을 때 1이 되는 값 77, 41, 53, 85
+            sum += x;         // 나온 값 더하기 256
             if(x &lt; min) min = x;
         }
     }
-    answer.push(sum);
-    answer.push(min);
-    return answer;
+    answer.push(sum);   // sum = 256
+    answer.push(min);    // min = 41
+    return answer;          // 256, 41
 }
 
 arr = [12, 77, 38, 41, 53, 92, 85];
@@ -72,16 +39,16 @@ console.log(solution(arr));
 </code></pre>
             </div>
 
-            <h3 class="t_tit2">네 번째 문제</h3>
+            <h3 class="t_tit2">두 번째 문제</h3>
             <div class="t_code">
 <pre><code class="language-js">function solution(arr) {
     let answer = arr;
     let sum = answer.reduce((a,b) => a + b, 0);
-    for(let i=0; i&lt;8; i++) {
-        for(let j=i+1; j&lt;9; j++) {
-            if((sum - (answer[i] + answer[j])) == 100) {
-                answer.splice(j, 1);
-                answer.splice(i, 1);
+    for(let i=0; i&lt;8; i++) {              // i는 7까지
+        for(let j=i+1; j&lt;9; j++) {       // j는 8까지
+            if((sum - (answer[i] + answer[j])) == 100) {    // sum 합 한 값 140에 각 배열 중 합 한 값을 뺏을 때 100이 되는 것
+                answer.splice(j, 1);    // 15 j에서 처음으로 나오는 값
+                answer.splice(i, 1);    // 25 i에서 처음으로 나오는 값
             }
         }
     }
@@ -93,11 +60,11 @@ console.log(solution(arr));
 </code></pre>
             </div>
 
-            <h3 class="t_tit2">다섯 번째 문제</h3>
+            <h3 class="t_tit2">세 번째 문제</h3>
             <div class="t_code">
 <pre><code class="language-js">function solution(s, t) {
-    let answer = s.split(t).length;
-    return answer-1;
+    let answer = s.split(t).length;    // split 문자열에서 원하는 값을 추출하여 배열로 반환 t는 'a'이므로 'j', 'v', 'scriptre', 'ctvue' 
+    return answer-1;                       // 나온 갯수에서 -1 = 3 답은 3
 }
 
 let str = "javascript react vue";
@@ -105,66 +72,66 @@ console.log(solution(str, 'a'));
 </code></pre>
             </div>
 
-            <h3 class="t_tit2">여섯 번째 문제</h3>
+            <h3 class="t_tit2">네 번째 문제</h3>
             <div class="t_code">
 <pre><code class="language-js">function solution(s) {
     let answer = "";
-    for(let x of s) {
-        if(x === x.toUpperCase()) answer += x.toLowerCase();
-        else answer += x.toUpperCase();
+    for(let x of s) {                                                                        // s = StuDY인데 이걸 x에 대입
+        if(x === x.toUpperCase()) answer += x.toLowerCase();    // x중 대문자 인 것이 존재하면 소문자로 변환
+        else answer += x.toUpperCase();                                      // 아니면 또 대문저로 전환
     }
-    return answer;
+    return answer;    // 답은 sTUdy
 }
 console.log(solution(StuDY));
 </code></pre>
             </div>
 
-            <h3 class="t_tit2">일곱 번째 문제</h3>
+            <h3 class="t_tit2">다섯 번째 문제</h3>
             <div class="t_code">
-<pre><code class="language-js">function solution(s) {
+<pre><code class="language-js">function solution(s) {        // s 는 ["teacher", "time", "student", "beautiful", "good"];
     let answer = "", max = Number.MIN_SAFE_INTEGER;
-    for(let x of s) {
-        if(x.length > max) {
-            max = x.length;
-            answer = x;
+    for(let x of s) {               // s를 x에 대입
+        if(x.length > max) {    // x 갯수 5개이며, 5 > max일 때
+            max = x.length;      // max는 5이다
+            answer = x;            // 5 이상중 제일 문자가 많은 것
         }
     }
-    return answer;
+    return answer;    // 답은 beautiful
 }
 let str = ["teacher", "time", "student", "beautiful", "good"];
 console.log(solution(str));
 </code></pre>
             </div>
 
-            <h3 class="t_tit2">여덟 번째 문제</h3>
+            <h3 class="t_tit2">여섯 번째 문제</h3>
             <div class="t_code">
-<pre><code class="language-js">function solution(s) {
+<pre><code class="language-js">function solution(s) {    // s는 study
     let answer;
-    let mid = Math.floor(s.length/2)
+    let mid = Math.floor(s.length/2)    // s갯수는 5개 그중 5/2를 하고 Math.floor는 소수점을 버린다. 그러면 2
 
-    if(s.length%2===1) answer = s.solution(mid, mid-1);
+    if(s.length%2===1) answer = s.solution(mid, mid-1);    // s.length은 5이며 5에서 2를 나누고 1이 있는 값이 있다면 mid는 2, mid-1은 1
     else answer = s.subString(mid-1, mid+1);
 
-    return answer;
+    return answer;    // 1은 t, 2는 u 답은t,u
 }
 console.log(solution("study"));
 </code></pre>
             </div>
 
-            <h3 class="t_tit2">아홉 번째 문제</h3>
+            <h3 class="t_tit2">일곱 번째 문제</h3>
             <div class="t_code">
-<pre><code class="language-js">function solution(s) {
+<pre><code class="language-js">function solution(s) {     // s는 ksekkset
     let answer = "";
-    for(let i=0; i&lt;s.length;  i++) {
-        if(s.indexOf(s[i]) === i) answer+=s[i];
+    for(let i=0; i&lt;s.length;  i++) {                      // s.length 갯수는 8이며 &lt;는 7까지임을 나타냄
+        if(s.indexOf(s[i]) === i) answer+=s[i];    // indexOf()는 특정 문자 위치를 찾고 숫자로 반환한다. s[i]) === i는 서로 대입했을 때 s[i] 그 값을 점점 더한다.
     }
-    return answer;
+    return answer;    // 답은 kset
 }
 console.log(solution("ksekkset"));
 </code></pre>
             </div>
 
-            <h3 class="t_tit2">열 번째 문제</h3>
+            <h3 class="t_tit2">여덟 번째 문제</h3>
             <div class="t_code">
 <pre><code class="language-js">function solution(s) {
     let answer;
@@ -177,8 +144,11 @@ let str = ["good", "time", "good", "time", "student"];
 console.log(solution(str));
 </code></pre>
             </div>
+            <div class="t_desc2">
+                위 문제와 비슷합니다.
+            </div>
             
-            <h3 class="t_tit2">열한 번째 문제</h3>
+            <h3 class="t_tit2">아홉 번째 문제</h3>
             <div class="t_code">
 <pre><code class="language-js">function solution(s) {
     let answer;
@@ -197,8 +167,11 @@ let str = "(A(BC)D)EF(G(H)(IJ)K)LM(N)";
 console.log(solution(str));
 </code></pre>
             </div>
+            <div class="t_desc2">
+                사실 아직 잘 모르겠습니다..
+            </div>
 
-            <h3 class="t_tit2">열두 번째 문제</h3>
+            <h3 class="t_tit2">열 번째 문제</h3>
             <div class="t_code">
 <pre><code class="language-js">function solution(n, k) {
     let answer;
@@ -213,6 +186,9 @@ console.log(solution(str));
 
 console.log(solution(8, 3));
 </code></pre>
+            </div>
+            <div class="t_desc2">
+                사실 아직 잘 모르겠습니다..
             </div>
 
         </div>
