--- a/project/html/board/board.html
+++ b/project/html/board/board.html
@@ -87,7 +87,7 @@
                     <span class="weekBest">주간 인기글</a></span><span class="MonthBest">월간 인기글</span>
                     <table>
                         <colgroup>
-                            <col style="width: 80%">
+                            <col style="width: 80%;">
                             <col style="width: 10%; text-align: right;">
                             <col style="width: 10%; text-align: right;">
                         </colgroup>
