--- a/project2/html/board/boardView.html
+++ b/project2/html/board/boardView.html
@@ -21,7 +21,7 @@
 </head>
 
 <header id="headerType" class="header__wrap">
-    <div class="header__inner">
+    <div class="header__inner container">
         <div class="header__logo">
             <a href="#">winimal</a>
         </div>
@@ -31,9 +31,15 @@
                 <li><a href="#">disease</a></li>
                 <li><a href="#">community</a></li>
                 <li><a href="#">pet shop</a></li>
-                <li class="login"><a href="#">LOGIN</a></li>
+                <li class="login"><a href="#">LOGOUT</a></li>
             </ul>
-        </nav>                
+        </nav>
+        <div class="ham_menu">
+            <input type="checkbox">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>                
     </div>
 </header>
 
@@ -289,5 +295,7 @@
         <button><a href="">문의하기</a></button>
     </h2>
 </footer>
+
+<script src="../asset/js/header_hamburger.js"></script>
 
 </html>
