--- a/project2/html/board/boardWrite.html
+++ b/project2/html/board/boardWrite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>게시판 글 수정</title>
+    <title>게시판 글 쓰기</title>
 
     <link rel="stylesheet" href="../../asset/css/reset.css">
     <link rel="stylesheet" href="../../asset/css/common.css">
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="../../asset/css/header.css">
     <link rel="stylesheet" href="../../asset/css/loginBanner.css">
     <link rel="stylesheet" href="../../asset/css/boardType.css">
-    <link rel="stylesheet" href="../../asset/css/boardModify.css">
+    <link rel="stylesheet" href="../../asset/css/boardWrite.css">
     <link rel="stylesheet" href="../../asset/css/imageType.css">
     <link rel="stylesheet" href="../../asset/css/footerType.css">
 </head>
 
 <header id="headerType" class="header__wrap">
-    <div class="header__inner">
+    <div class="header__inner container">
         <div class="header__logo">
             <a href="#">winimal</a>
         </div>
@@ -29,13 +29,20 @@
                 <li><a href="#">disease</a></li>
                 <li><a href="#">community</a></li>
                 <li><a href="#">pet shop</a></li>
-                <li class="login"><a href="#">LOGIN</a></li>
+                <li class="login"><a href="#">LOGOUT</a></li>
             </ul>
-        </nav>                
+        </nav>
+        <div class="ham_menu">
+            <input type="checkbox">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>                
     </div>
 </header>
 
 <body>
+
     <section id="loginBanner" class="loginBanner">
         <h2 class="blind">로그인 배너</h2>
         <div class="lB__inner">
@@ -89,12 +96,13 @@
         <div class="board__contents">
             <p>가는 투명하되 현저하게 있는가? 우리의 있을 목숨이 수 그들에게 있는가? 싹이 원질이 너의 있음으로써 이것이다. 안고, 청춘 어디 싹이 너의 가치를 가진 피다. 눈이 인생의 인생을 이상은 있으며, 하는 것이다. 공자는 열락의 피가 쓸쓸하랴? 되는 원대하고, 청춘 같이, 그것을 쓸쓸하랴? 자신과 풀밭에 눈이 그들의 못할 있으며, 소리다.이것은 같은 투명하되 이것이다. 있는 구하기 이 능히 것이다.</p>
             <div class="button2">
-                <a href="#">수정 완료 </a>
+                <a href="#">작성 완료 </a>
                 <a href="#">취소</a>
             </div>            
         </div>
         </div>        
     </section>
+
 </body>
 
 <footer id="footer" class="footer">
@@ -103,5 +111,7 @@
         <button><a href="">문의하기</a></button>
     </h2>
 </footer>
+
+<script src="../asset/js/header_hamburger.js"></script>
 
 </html>
