--- a/project/index.html
+++ b/project/index.html
@@ -37,8 +37,8 @@
             flex-wrap: nowrap;
         }
         .card {
-            height: 100vh;
-            padding: 10px;
+            height: 100vw;
+            padding: 30px;
             justify-content: space-between;
             width: 33%;
         }
@@ -88,7 +88,7 @@
         }
         li {
             line-height: 1.6;
-            padding-left: 110px;
+            padding-left: 100px;
         }
         li a {
             color: #505050;
