--- a/project/index.html
+++ b/project/index.html
@@ -37,7 +37,7 @@
             flex-wrap: nowrap;
         }
         .card {
-            height: 100vw;
+            height: 100vh;
             padding: 30px;
             justify-content: space-between;
             width: 33%;
