--- a/project/html/board/boardView.html
+++ b/project/html/board/boardView.html
@@ -298,6 +298,6 @@
     </h2>
 </footer>
 
-<script src="../asset/js/header_hamburger.js"></script>
+<script src="../../asset/js/header_hamburger.js"></script>
 
 </html>
