--- a/project/html/board/boardModify.html
+++ b/project/html/board/boardModify.html
@@ -114,6 +114,6 @@
     </h2>
 </footer>
 
-<script src="../asset/js/header_hamburger.js"></script>
+<script src="../../asset/js/header_hamburger.js"></script>
 
 </html>
